--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-dan.zokisoft.com from pycharm
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
+    new html
+
+</body>
+</html>
