--- a/about.html
+++ b/about.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>About</title>
 </head>
 <body>
 
-<a href="/about.html">About</a> | <a href="/gallery.html">Gallery</a>
 
 
 </body>
