--- a/gallery.html
+++ b/gallery.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Gallery</title>
 </head>
 <body>
-
-<a href="/about.html">About</a> | <a href="/gallery.html">Gallery</a>
-
 
 </body>
 </html>
